# razvan-chat-app

./: .gitignore  components.json  deno.json  package.json  test.ts  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: app-sidebar.tsx  chat-area.tsx  chat-layout.tsx  create-group-modal.tsx  login-page.tsx  user-search.tsx
src/components/ui/: dropdown-menu.tsx  sidebar.tsx
src/lib/: firebase.ts  focushandler.ts  testnotifs.ts
src/pages/: chat-page.tsx  login-page.tsx  settings-page.tsx  wave-background.tsx
